--- a/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
+++ b/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
@@ -1,19 +1,19 @@
-<h5>Agregar Tarjeta</h5>
+<h5 class="titulo">Agregar Tarjeta</h5>
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-  <div class="form-group col-md-3">
+  <div class="form-group">
     <label>Titular</label>
     <input type="text" class="form-control" formControlName="titular" />
   </div>
-  <div class="form-group col-md-3">
+  <div class="form-group">
     <label>N° Tarjeta</label>
     <input type="number" class="form-control" formControlName="numTarjeta" />
   </div>
   <div class="row">
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-6">
       <label>Mes/Año</label>
       <input type="text" class="form-control" formControlName="mesAnio" />
     </div>
-    <div class="form-group col-md-1">
+    <div class="form-group col-md-6">
       <label>CVV</label>
       <input type="password" class="form-control" formControlName="CVV" />
     </div>
