--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,5 +1,32 @@
-<h3>Tarjeta Crédito</h3>
-<br />
-<app-agregar-tarjeta (newTarjeta)="onNewTarjeta($event)"></app-agregar-tarjeta>
-<br />
-<app-listar-tarjetas></app-listar-tarjetas>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-lg-8 offset-lg-2">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="titulo">Tarjeta Crédito</h3>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br />
+
+  <div class="row mt-4">
+    <div class="col-lg-5">
+      <div class="card">
+        <div class="card-body">
+          <app-agregar-tarjeta
+            (newTarjeta)="onNewTarjeta($event)"
+          ></app-agregar-tarjeta>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-7">
+      <div class="card">
+        <div class="card-body">
+          <app-listar-tarjetas [tarjetas]="arrayTarjetas"></app-listar-tarjetas>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
