conexion entre back y front

--- a/Frontend/src/app/TarjetaCredito/listar-tarjetas/listar-tarjetas.component.html
+++ b/Frontend/src/app/TarjetaCredito/listar-tarjetas/listar-tarjetas.component.html
@@ -4,8 +4,8 @@
   <tbody>
     <tr *ngFor="let tarjeta of tarjetas; let indice = index">
       <td>{{ tarjeta.titular }}</td>
-      <td>{{ tarjeta.numTarjeta }}</td>
-      <td>{{ tarjeta.mesAnio }}</td>
+      <td>{{ tarjeta.numeroTarjeta }}</td>
+      <td>{{ tarjeta.fechaExpiracion }}</td>
       <td>
         <i class="boton text-warning">
           <fa-icon [icon]="faPenToSquare"></fa-icon>
