agregar tarjeta. Reestructuracion del proyecto

--- a/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
+++ b/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
@@ -6,12 +6,16 @@
   </div>
   <div class="form-group">
     <label>N° Tarjeta</label>
-    <input type="number" class="form-control" formControlName="numTarjeta" />
+    <input type="text" class="form-control" formControlName="numeroTarjeta" />
   </div>
   <div class="row">
     <div class="form-group col-md-6">
       <label>Mes/Año</label>
-      <input type="text" class="form-control" formControlName="mesAnio" />
+      <input
+        type="text"
+        class="form-control"
+        formControlName="fechaExpiracion"
+      />
     </div>
     <div class="form-group col-md-6">
       <label>CVV</label>
