--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -14,9 +14,10 @@
     <div class="col-lg-5">
       <div class="card">
         <div class="card-body">
-          <app-agregar-tarjeta
+          <!--<app-agregar-tarjeta
             (newTarjeta)="onNewTarjeta($event)"
-          ></app-agregar-tarjeta>
+          ></app-agregar-tarjeta>-->
+          <app-agregar-tarjeta></app-agregar-tarjeta>
         </div>
       </div>
     </div>
@@ -24,7 +25,8 @@
     <div class="col-lg-7">
       <div class="card">
         <div class="card-body">
-          <app-listar-tarjetas [tarjetas]="arrayTarjetas"></app-listar-tarjetas>
+          <!--<app-listar-tarjetas [tarjetas]="arrayTarjetas"></app-listar-tarjetas>-->
+          <app-listar-tarjetas></app-listar-tarjetas>
         </div>
       </div>
     </div>
