--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -16,6 +16,7 @@
         <div class="card-body">
           <app-agregar-tarjeta
             (newTarjeta)="nuevaTarjeta($event)"
+            (updateTarjeta)="sendTarjeta($event)"
           ></app-agregar-tarjeta>
         </div>
       </div>
