--- a/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
+++ b/Frontend/src/app/TarjetaCredito/agregar-tarjeta/agregar-tarjeta.component.html
@@ -1,4 +1,4 @@
-<h5 class="titulo">Agregar Tarjeta</h5>
+<h5 class="titulo">{{ titulo }} Tarjeta</h5>
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
   <div class="form-group">
     <label>Titular</label>
@@ -22,5 +22,5 @@
       <input type="password" class="form-control" formControlName="CVV" />
     </div>
   </div>
-  <input type="submit" class="btn btn-primary btn-block" value="Agregar" />
+  <input type="submit" class="btn btn-primary btn-block" value="{{ titulo }}" />
 </form>
